Fix main section grid alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,13 +164,23 @@ main {
 }
 
 main h2 {
-    margin-bottom: 0.5rem;
+    margin-bottom: -1.5rem;
 }
 
 main .projects {
     display: grid;
+    grid-template-rows: auto 1fr;
+}
+
+main .projects .all-projects {
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 30px;
+}
+
+main .projects h2 {
+    grid-column: 1 / -1;
+    margin-bottom: 8px;
 }
 
 main .projects .card {
@@ -181,8 +191,7 @@ main .projects .card {
     padding: 0 20px 20px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px #b9b9b9;
-    border-left: 5px solid #005aff;
-    height: 250px;
+    border-left: 10px solid #005aff;
 }
 
 main .projects .card > div:last-child {
@@ -217,16 +226,20 @@ main .projects .card p {
 
 .announcements-trending {
     display: grid;
-    gap: 10px;
+    grid-template-rows: auto 1fr auto 1fr;
+    gap: 30px;
 }
 
-.announcements-trending > div:first-child {
-    grid-row: 1 / 2;
-}
-
-.announcements-trending > div:last-child {
+.announcements-trending > .announcements {
     grid-row: 2 / 3;
-    align-self: end;
+}
+
+.announcements-trending .announcements + h2 {
+    grid-row: 3 / 4;
+}
+
+.announcements-trending .trending {
+    grid-row: 4 / 5;
 }
 
 .announcements {
@@ -235,6 +248,7 @@ main .projects .card p {
     grid-template-rows: repeat(3, 1fr);
     border-radius: 10px;
     padding: 10px 30px 20px;
+    box-shadow: 5px 5px 5px #b9b9b9;
 }
 
 .announcements .announcement1,
@@ -248,22 +262,28 @@ main .projects .card p {
     margin-right: 10px;
 }
 
-.trending-users {
+.trending {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    background-color: white;
-    padding: 30px;
-    border-radius: 10px;
+    grid-template-rows: 67px;
     gap: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #b9b9b9;
 }
 
-.trending .trending-users .user {
+.trending > div:first-of-type {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    padding: 30px;
+}
+
+.trending .user {
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 20px;
 }
 
-.trending .trending-users .user div {
+.trending .user div {
     align-self: center;
 }
 
@@ -275,6 +295,7 @@ main .projects .card p {
     color: gray;
 }
 
-.trending .trending-users img {
+.trending .user img {
     width: 50px;
+    align-self: center;
 }
